fixed the vue cnd problem

--- a/app/templates/html/layout.html
+++ b/app/templates/html/layout.html
@@ -23,7 +23,7 @@
     </div>
 
     <!-- js -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     {% block js %}{% endblock js %}
 </body>
 </html>
