added the custom icon and changed the title

--- a/app/templates/html/layout.html
+++ b/app/templates/html/layout.html
@@ -12,6 +12,8 @@
     <!-- custom css -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename = 'css/layout.css') }}">
     {% block custom_css %}{% endblock custom_css %}
+    <!-- icon -->
+    <link rel="icon" type="image" href="/static/img/4th_wall_br.jpg">
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Caveat:700&display=swap" rel="stylesheet">
